# CPP-SQL

./: .gitignore  CMakeLists.txt  README.md
data/: README.md
include/: client_menu.h  server_order.h  server_table.h  tools.h
make/: Makefile
res/: menu_end.txt  menu_start.txt
src/: client_menu.cpp  server_order.cpp  tools.cpp
test/: client.cpp  server.cpp
